--- a/music_app/app/views/users/_form.html.erb
+++ b/music_app/app/views/users/_form.html.erb
@@ -1,5 +1,5 @@
 <form action="<%= action %>" method="post">
-<%= hidden_field_tag :authenticity_token, form_authenticity_token -%>
+  <%= hidden_field_tag :authenticity_token, form_authenticity_token -%>
   <input type="hidden" name="_method" value="<%= method %>">
 
   <label>
@@ -11,11 +11,11 @@
   </label>
 
   <% if logged_in? %>
-    <label for="old_password">
+    <label>
       Current Password:
       <input
         type="password"
-        name="user[password]">
+        name="old_password">
     </label>
   <% end %>
 
@@ -25,7 +25,7 @@
     <% password_text = "Password:"%>
   <% end %>
 
-  <label for="new_password">
+  <label>
     <% password_text %>
     <input
       type="password"
